<resources>
    <string name="app_name">ТАЙМЕР</string>
    <string name="sequence_text">НАЗВАНИЕ ПРОГРАММЫ</string>
    <string name="delete">УДАЛИТЬ</string>
    <string name="add_new_seq">ДОБАВИТЬ НОВУЮ ПРОГРАММУ</string>
    <string name="settings">НАСТРОЙКИ</string>
    <string name="add_new_ex">ДОБАВИТЬ УПРАЖНЕНИЕ</string>
    <string name="start_workout">НАЧАТЬ ТРЕНИРОВКУ</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="start">СТАРТ</string>
    <string name="next_btn">СЛЕД.</string>
    <string name="pause">ПАУЗА</string>
    <string name="_0">0</string>
    <string name="lang">Язык</string>
    <string name="chooseLang">Вырерите язык</string>
    <string name="font">Шрифт</string>
    <string name="chooseFont">Выберите шрифт</string>
    <string name="theme">Тема</string>
    <string name="nightTheme">Темная тема</string>
    <string name="title_activity_settings">Настройки</string>

</resources>