<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SequenceDetailActivity"
    android:orientation="vertical">



    <EditText
        android:id="@+id/sequence_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sequence_text"
        android:gravity="top"
        android:padding="20dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workout_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/List"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/add_new_ex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_new_ex"
            android:padding="10dp"/>

        <Button
            android:id="@+id/start_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/start_workout"
            android:padding="10dp"
            android:onClick="start_workout"/>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            android:padding="10dp"/>

    </LinearLayout>
</LinearLayout>